// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`struct > createSVGElementInfo > should return SVG info > arc spline 1`] = `
{
  "children": [
    {
      "attributes": {
        "clip-path": undefined,
        "fill": "none",
      },
      "children": [
        {
          "attributes": {
            "d": "M 0 0 A 6.249999999999999 6.249999999999999 0 1 1 10 0 A 14.499999999999998 14.499999999999998 0 0 0 10 20 L 100 100",
            "stroke": "#000000",
            "stroke-dasharray": undefined,
            "stroke-linecap": "butt",
            "stroke-linejoin": "round",
            "stroke-opacity": undefined,
            "stroke-width": 2,
          },
          "tag": "path",
        },
      ],
      "tag": "g",
    },
    {
      "attributes": {
        "fill": "#000000",
        "fill-opacity": undefined,
        "stroke": "#000000",
        "stroke-dasharray": undefined,
        "stroke-linecap": "butt",
        "stroke-linejoin": "round",
        "stroke-opacity": undefined,
        "stroke-width": 2,
      },
      "children": [],
      "tag": "g",
    },
  ],
  "tag": "g",
}
`;

exports[`struct > createSVGElementInfo > should return SVG info > bezier spline 1`] = `
{
  "children": [
    {
      "attributes": {
        "clip-path": undefined,
        "fill": "none",
      },
      "children": [
        {
          "attributes": {
            "d": "M 0 0 C 4 -10 8 -10 10 0 C 4 10 8 10 10 20 L 100 100",
            "stroke": "#000000",
            "stroke-dasharray": undefined,
            "stroke-linecap": "butt",
            "stroke-linejoin": "round",
            "stroke-opacity": undefined,
            "stroke-width": 2,
          },
          "tag": "path",
        },
      ],
      "tag": "g",
    },
    {
      "attributes": {
        "fill": "#000000",
        "fill-opacity": undefined,
        "stroke": "#000000",
        "stroke-dasharray": undefined,
        "stroke-linecap": "butt",
        "stroke-linejoin": "round",
        "stroke-opacity": undefined,
        "stroke-width": 2,
      },
      "children": [],
      "tag": "g",
    },
  ],
  "tag": "g",
}
`;

exports[`struct > createSVGElementInfo > should return SVG info > straight spline 1`] = `
{
  "children": [
    {
      "attributes": {
        "clip-path": undefined,
        "fill": "none",
      },
      "children": [
        {
          "attributes": {
            "d": "M 0 0 L 10 0 L 10 20 L 100 100",
            "stroke": "#000000",
            "stroke-dasharray": undefined,
            "stroke-linecap": "butt",
            "stroke-linejoin": "round",
            "stroke-opacity": undefined,
            "stroke-width": 2,
          },
          "tag": "path",
        },
      ],
      "tag": "g",
    },
    {
      "attributes": {
        "fill": "#000000",
        "fill-opacity": undefined,
        "stroke": "#000000",
        "stroke-dasharray": undefined,
        "stroke-linecap": "butt",
        "stroke-linejoin": "round",
        "stroke-opacity": undefined,
        "stroke-width": 2,
      },
      "children": [],
      "tag": "g",
    },
  ],
  "tag": "g",
}
`;

exports[`struct > createSVGElementInfo > should return SVG info of line heads > closed_blank, closed_filled 1`] = `
{
  "children": [
    {
      "attributes": {
        "id": "clip-a",
        "stroke-width": 2,
      },
      "children": [
        {
          "attributes": {
            "clip-rule": "evenodd",
            "d": "M -1.0526315789473684 -1.0526315789473684 L 101.05263157894737 -1.0526315789473684 L 101.05263157894737 101.05263157894737 L -1.0526315789473684 101.05263157894737 M 0 0 L 4.242640687119284 12.727922061357855 L 12.727922061357855 4.2426406871192865 Z M 100 100 L 95.75735931288071 87.27207793864214 L 87.27207793864214 95.75735931288071 Z",
          },
          "tag": "path",
        },
      ],
      "tag": "clipPath",
    },
    {
      "attributes": {
        "clip-path": "url(#clip-a)",
        "fill": "none",
      },
      "children": [
        {
          "attributes": {
            "d": "M 0 0 L 100 100",
            "stroke": "#000000",
            "stroke-dasharray": undefined,
            "stroke-linecap": "butt",
            "stroke-linejoin": "round",
            "stroke-opacity": undefined,
            "stroke-width": 2,
          },
          "tag": "path",
        },
      ],
      "tag": "g",
    },
    {
      "attributes": {
        "fill": "#000000",
        "fill-opacity": undefined,
        "stroke": "#000000",
        "stroke-dasharray": undefined,
        "stroke-linecap": "butt",
        "stroke-linejoin": "round",
        "stroke-opacity": undefined,
        "stroke-width": 2,
      },
      "children": [
        {
          "attributes": {
            "d": "M 0 0 L 4.242640687119284 12.727922061357855 L 12.727922061357855 4.2426406871192865 Z",
            "fill": "none",
          },
          "tag": "path",
        },
        {
          "attributes": {
            "d": "M 100 100 L 95.75735931288071 87.27207793864214 L 87.27207793864214 95.75735931288071 Z",
            "fill": undefined,
          },
          "tag": "path",
        },
      ],
      "tag": "g",
    },
  ],
  "tag": "g",
}
`;

exports[`struct > createSVGElementInfo > should return SVG info of line heads > dot_blank, dot_filled 1`] = `
{
  "children": [
    {
      "attributes": {
        "id": "clip-a",
        "stroke-width": 2,
      },
      "children": [
        {
          "attributes": {
            "clip-rule": "evenodd",
            "d": "M -9.53791295318594 -9.53791295318594 L 109.53791295318594 -9.53791295318594 L 109.53791295318594 109.53791295318594 L -9.53791295318594 109.53791295318594 M -6 0 a 6 6 0 0 0 12 0 a 6 6 0 0 0 -12 0 M 94 100 a 6 6 0 0 0 12 0 a 6 6 0 0 0 -12 0",
          },
          "tag": "path",
        },
      ],
      "tag": "clipPath",
    },
    {
      "attributes": {
        "clip-path": "url(#clip-a)",
        "fill": "none",
      },
      "children": [
        {
          "attributes": {
            "d": "M 0 0 L 100 100",
            "stroke": "#000000",
            "stroke-dasharray": undefined,
            "stroke-linecap": "butt",
            "stroke-linejoin": "round",
            "stroke-opacity": undefined,
            "stroke-width": 2,
          },
          "tag": "path",
        },
      ],
      "tag": "g",
    },
    {
      "attributes": {
        "fill": "#000000",
        "fill-opacity": undefined,
        "stroke": "#000000",
        "stroke-dasharray": undefined,
        "stroke-linecap": "butt",
        "stroke-linejoin": "round",
        "stroke-opacity": undefined,
        "stroke-width": 2,
      },
      "children": [
        {
          "attributes": {
            "cx": 0,
            "cy": 0,
            "fill": "none",
            "rx": 6,
            "ry": 6,
          },
          "tag": "ellipse",
        },
        {
          "attributes": {
            "cx": 100,
            "cy": 100,
            "rx": 6,
            "ry": 6,
          },
          "tag": "ellipse",
        },
      ],
      "tag": "g",
    },
  ],
  "tag": "g",
}
`;

exports[`struct > createSVGElementInfo > should return SVG info of line heads > open 1`] = `
{
  "children": [
    {
      "attributes": {
        "id": "clip-a",
        "stroke-width": 2,
      },
      "children": [
        {
          "attributes": {
            "clip-rule": "evenodd",
            "d": "M -1.0526315789473684 -1.0526315789473684 L 109.53791295318594 -1.0526315789473684 L 109.53791295318594 109.53791295318594 L -1.0526315789473684 109.53791295318594 M 94 100 a 6 6 0 0 0 12 0 a 6 6 0 0 0 -12 0",
          },
          "tag": "path",
        },
      ],
      "tag": "clipPath",
    },
    {
      "attributes": {
        "clip-path": "url(#clip-a)",
        "fill": "none",
      },
      "children": [
        {
          "attributes": {
            "d": "M 0 0 L 100 100",
            "stroke": "#000000",
            "stroke-dasharray": undefined,
            "stroke-linecap": "butt",
            "stroke-linejoin": "round",
            "stroke-opacity": undefined,
            "stroke-width": 2,
          },
          "tag": "path",
        },
      ],
      "tag": "g",
    },
    {
      "attributes": {
        "fill": "#000000",
        "fill-opacity": undefined,
        "stroke": "#000000",
        "stroke-dasharray": undefined,
        "stroke-linecap": "butt",
        "stroke-linejoin": "round",
        "stroke-opacity": undefined,
        "stroke-width": 2,
      },
      "children": [
        {
          "attributes": {
            "d": "M 4.242640687119284 12.727922061357855 L 0 0 L 12.727922061357855 4.2426406871192865",
            "fill": "none",
          },
          "tag": "path",
        },
        {
          "attributes": {
            "cx": 100,
            "cy": 100,
            "rx": 6,
            "ry": 6,
          },
          "tag": "ellipse",
        },
      ],
      "tag": "g",
    },
  ],
  "tag": "g",
}
`;
